unpackaged/main/default/objects/Account/fields/Nombre_Completo__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Completo__c</fullName>
    <label>Nombre Completo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>