unpackaged/main/default/objects/Account/fields/Nombre_cta__c.field-meta.xml
<CustomField>
    <fullName>Nombre_cta__c</fullName>
    <label>Nombre2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>