unpackaged/main/default/objects/Account/fields/Nombre_del_Asesor__c.field-meta.xml
<CustomField>
    <fullName>Nombre_del_Asesor__c</fullName>
    <formula>Asesor__r.Contact.FirstName &amp; &quot; &quot; &amp; Asesor__r.Contact.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre del Asesor</label>
    <type>Text</type>
</CustomField>