unpackaged/main/default/objects/Account/fields/Nombre_del_Fraccionamiento__c.field-meta.xml
<CustomField>
    <fullName>Nombre_del_Fraccionamiento__c</fullName>
    <label>Nombre del Fraccionamiento</label>
    <length>100</length>
    <type>Text</type>
</CustomField>