unpackaged/main/default/objects/Account/fields/Nombre_Fraccionamiento__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Fraccionamiento__c</fullName>
    <label>Nombre Fraccionamiento</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ACACIAS</fullName>
            </value>
            <value>
                <fullName>ACACIAS II</fullName>
            </value>
            <value>
                <fullName>ALBERI RESIDENCIAL</fullName>
            </value>
            <value>
                <fullName>ALBORETO RESIDENCIAL</fullName>
            </value>
            <value>
                <fullName>ALVENTO</fullName>
            </value>
            <value>
                <fullName>AMAIRE</fullName>
            </value>
            <value>
                <fullName>ARBOLADA</fullName>
            </value>
            <value>
                <fullName>ARCOS 7</fullName>
            </value>
            <value>
                <fullName>ARCOS DEL SOL</fullName>
            </value>
            <value>
                <fullName>ARCOS DEL SOL SECTOR ELITE</fullName>
            </value>
            <value>
                <fullName>ARRAYANES</fullName>
            </value>
            <value>
                <fullName>ARRAYANES HABITAT II</fullName>
            </value>
            <value>
                <fullName>BARRIO ALAMEDA</fullName>
            </value>
            <value>
                <fullName>BARRIO ESTRELLA</fullName>
            </value>
            <value>
                <fullName>BARRIO PARQUE</fullName>
            </value>
            <value>
                <fullName>BELCANTO</fullName>
            </value>
            <value>
                <fullName>BELCANTO II</fullName>
            </value>
            <value>
                <fullName>BELLATERRA</fullName>
            </value>
            <value>
                <fullName>BELLA VISTA 2º SECTOR FOMERREY</fullName>
            </value>
            <value>
                <fullName>BELLA VISTA 3ER SECTOR</fullName>
            </value>
            <value>
                <fullName>BELLAVISTA 4TO. SECTOR</fullName>
            </value>
            <value>
                <fullName>BELLO AMANECER RESIDENCIAL</fullName>
            </value>
            <value>
                <fullName>BORRAR D09</fullName>
            </value>
            <value>
                <fullName>BOSQUE BOREAL</fullName>
            </value>
            <value>
                <fullName>BOSQUE DE LOS NOGALES</fullName>
            </value>
            <value>
                <fullName>BOSQUE REAL</fullName>
            </value>
            <value>
                <fullName>BOSQUES</fullName>
            </value>
            <value>
                <fullName>BOSQUES DE CASTILLA</fullName>
            </value>
            <value>
                <fullName>BOSQUES DE LERMA</fullName>
            </value>
            <value>
                <fullName>BOSQUES DEL NEVADO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>