unpackaged/main/default/objects/Account/fields/Nombre_Incompleto__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Incompleto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nombre Incompleto</label>
    <type>Checkbox</type>
</CustomField>