unpackaged/main/default/objects/Account/fields/Nombre_Pro__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Pro__c</fullName>
    <label>Nombre_Pro</label>
    <length>80</length>
    <type>Text</type>
</CustomField>