unpackaged/main/default/objects/Account/fields/Notaria__c.field-meta.xml
<CustomField>
    <fullName>Notaria__c</fullName>
    <label>Notaría</label>
    <type>TextArea</type>
</CustomField>