unpackaged/main/default/objects/Account/fields/Notario__c.field-meta.xml
<CustomField>
    <fullName>Notario__c</fullName>
    <label>Notario</label>
    <type>TextArea</type>
</CustomField>