unpackaged/main/default/objects/Account/fields/NSS__c.field-meta.xml
<CustomField>
    <fullName>NSS__c</fullName>
    <inlineHelpText>Obligatorio en Crédito Infonavit o Cofinavit</inlineHelpText>
    <label>NSS</label>
    <length>11</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>