unpackaged/main/default/objects/Account/fields/NumCliente__c.field-meta.xml
<CustomField>
    <fullName>NumCliente__c</fullName>
    <label>Número de Cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>