unpackaged/main/default/objects/Account/fields/Numero_de_Cliente_AutoNum__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Cliente_AutoNum__c</fullName>
    <displayFormat>CLI-{000000}</displayFormat>
    <label>Número de Cliente</label>
    <type>AutoNumber</type>
</CustomField>