unpackaged/main/default/objects/Account/fields/Numero_de_Oportunidades__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Oportunidades__c</fullName>
    <label>Número de Oportunidades</label>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>