unpackaged/main/default/objects/Account/fields/Numero_Identificacion_Unico__c.field-meta.xml
<CustomField>
    <fullName>Numero_Identificacion_Unico__c</fullName>
    <label>Número de Identificación Único</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>