unpackaged/main/default/objects/Account/fields/Numerodecliente__c.field-meta.xml
<CustomField>
    <fullName>Numerodecliente__c</fullName>
    <label>Número de cliente</label>
    <length>30</length>
    <type>Text</type>
</CustomField>