unpackaged/main/default/objects/Account/fields/NumeroExterior__c.field-meta.xml
<CustomField>
    <fullName>NumeroExterior__c</fullName>
    <label>Numero Exterior</label>
    <length>50</length>
    <type>Text</type>
</CustomField>