unpackaged/main/default/objects/Account/fields/NumeroInterior__c.field-meta.xml
<CustomField>
    <fullName>NumeroInterior__c</fullName>
    <label>Numero Interior</label>
    <length>50</length>
    <type>Text</type>
</CustomField>