unpackaged/main/default/objects/Account/fields/Otro_Telefono__c.field-meta.xml
<CustomField>
    <fullName>Otro_Telefono__c</fullName>
    <label>Otro Teléfono</label>
    <type>Phone</type>
</CustomField>