unpackaged/main/default/objects/Account/fields/Pais_cta__c.field-meta.xml
<CustomField>
    <fullName>Pais_cta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Atención en los acentos, la información origen los manda con y sin acentos.
México - Mexico</description>
    <label>País</label>
    <referenceTo>Pais__c</referenceTo>
    <relationshipLabel>Cuentas</relationshipLabel>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>