unpackaged/main/default/objects/Account/fields/Producto_Financiero__c.field-meta.xml
<CustomField>
    <fullName>Producto_Financiero__c</fullName>
    <label>Producto Financiero</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo_Credito__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Producto_Financiero</valueSetName>
    </valueSet>
</CustomField>