unpackaged/main/default/objects/Account/fields/ProductoFinanciero__c.field-meta.xml
<CustomField>
    <fullName>ProductoFinanciero__c</fullName>
    <label>Producto Financiero</label>
    <type>TextArea</type>
</CustomField>