unpackaged/main/default/objects/Account/fields/Programadora_de_Vivienda_Id__c.field-meta.xml
<CustomField>
    <fullName>Programadora_de_Vivienda_Id__c</fullName>
    <formula>Vivienda_Mas_Reciente__r.Fracc__r.Programadora_de_Vivienda__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Programadora de Vivienda (Id)</label>
    <type>Text</type>
</CustomField>