unpackaged/main/default/objects/Account/fields/Prospectador__c.field-meta.xml
<CustomField>
    <fullName>Prospectador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prospectador</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR 3</booleanFilter>
        <filterItems>
            <field>User.ProfileId</field>
            <operation>equals</operation>
            <value>00e23000000anG7AAI</value>
        </filterItems>
        <filterItems>
            <field>User.FraccionamientoAutorizados__c</field>
            <operation>contains</operation>
            <valueField>$Source.Nombre_Fraccionamiento__c</valueField>
        </filterItems>
        <filterItems>
            <field>User.ProfileId</field>
            <operation>equals</operation>
            <value>00e23000000anG0AAI</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Cuentas1</relationshipName>
    <type>Lookup</type>
</CustomField>