unpackaged/main/default/objects/Account/fields/Puesto__c.field-meta.xml
<CustomField>
    <fullName>Puesto__c</fullName>
    <label>Puesto</label>
    <length>80</length>
    <type>Text</type>
</CustomField>