unpackaged/main/default/objects/Account/fields/Punnec_cta__c.field-meta.xml
<CustomField>
    <fullName>Punnec_cta__c</fullName>
    <label>Puntos necesarios</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>