unpackaged/main/default/objects/Account/fields/Puntot_cta__c.field-meta.xml
<CustomField>
    <fullName>Puntot_cta__c</fullName>
    <label>Puntos totales</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>