unpackaged/main/default/objects/Account/fields/QEQ_Apellido_Materno__c.field-meta.xml
<CustomField>
    <fullName>QEQ_Apellido_Materno__c</fullName>
    <label>LN Apellido Materno</label>
    <length>255</length>
    <type>Text</type>
</CustomField>