unpackaged/main/default/objects/Account/fields/QEQ_CURP__c.field-meta.xml
<CustomField>
    <fullName>QEQ_CURP__c</fullName>
    <label>LN CURP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>