unpackaged/main/default/objects/Account/fields/QEQ_Fecha_Nacimiento__c.field-meta.xml
<CustomField>
    <fullName>QEQ_Fecha_Nacimiento__c</fullName>
    <label>LN Fecha Nacimiento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>