unpackaged/main/default/objects/Account/fields/QEQ_Lista__c.field-meta.xml
<CustomField>
    <fullName>QEQ_Lista__c</fullName>
    <label>LN Lista</label>
    <length>255</length>
    <type>Text</type>
</CustomField>