unpackaged/main/default/objects/Account/fields/QEQ_Nombre__c.field-meta.xml
<CustomField>
    <fullName>QEQ_Nombre__c</fullName>
    <label>LN Nombre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>