unpackaged/main/default/objects/Account/fields/QEQ_RFC__c.field-meta.xml
<CustomField>
    <fullName>QEQ_RFC__c</fullName>
    <label>LN RFC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>