unpackaged/main/default/objects/Account/fields/QEQ_Sexo__c.field-meta.xml
<CustomField>
    <fullName>QEQ_Sexo__c</fullName>
    <label>LN Sexo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>