unpackaged/main/default/objects/Account/fields/QUOTE_Bonificacion__c.field-meta.xml
<CustomField>
    <fullName>QUOTE_Bonificacion__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Bonificación</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>