unpackaged/main/default/objects/Account/fields/QUOTE_Construccion__c.field-meta.xml
<CustomField>
    <fullName>QUOTE_Construccion__c</fullName>
    <defaultValue>&quot;XXX m2&quot;</defaultValue>
    <inlineHelpText>Ingrese la cantidad de m2 de construcción</inlineHelpText>
    <label>Construcción</label>
    <length>50</length>
    <type>Text</type>
</CustomField>