unpackaged/main/default/objects/Account/fields/QUOTE_Correo_Asesor__c.field-meta.xml
<CustomField>
    <fullName>QUOTE_Correo_Asesor__c</fullName>
    <formula>Asesor__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Correo Asesor</label>
    <type>Text</type>
</CustomField>