unpackaged/main/default/objects/Account/fields/QUOTE_Credito_INFONAVIT__c.field-meta.xml
<CustomField>
    <fullName>QUOTE_Credito_INFONAVIT__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Crédito INFONAVIT</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>