unpackaged/main/default/objects/Account/fields/QUOTE_Enganche_a_Pagar__c.field-meta.xml
<CustomField>
    <fullName>QUOTE_Enganche_a_Pagar__c</fullName>
    <formula>QUOTE_Precio_Total__c -  QUOTE_Monto_que_Recibira_JAVER__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enganche a Pagar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>