unpackaged/main/default/objects/Account/fields/QUOTE_Esquina__c.field-meta.xml
<CustomField>
    <fullName>QUOTE_Esquina__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Esquina</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>