unpackaged/main/default/objects/Account/fields/QUOTE_Fecha_de_Vencimiento__c.field-meta.xml
<CustomField>
    <fullName>QUOTE_Fecha_de_Vencimiento__c</fullName>
    <defaultValue>TODAY() + 15</defaultValue>
    <label>Fecha de Vencimiento</label>
    <type>Date</type>
</CustomField>