unpackaged/main/default/objects/Account/fields/QUOTE_Folio_Cotizacion__c.field-meta.xml
<CustomField>
    <fullName>QUOTE_Folio_Cotizacion__c</fullName>
    <displayFormat>{000000}-{DD}{MM}{YY}</displayFormat>
    <label>Folio Cotización</label>
    <type>AutoNumber</type>
</CustomField>