unpackaged/main/default/objects/Account/fields/QUOTE_Folio_Cotizacion_Formula__c.field-meta.xml
<CustomField>
    <fullName>QUOTE_Folio_Cotizacion_Formula__c</fullName>
    <formula>QUOTE_Folio_Cotizacion__c &amp; &quot;-&quot; &amp; TEXT(DAY(TODAY()))&amp; TEXT(MONTH(TODAY()))&amp; TEXT(YEAR(TODAY())) &amp; TEXT(HOUR( TIMENOW())-6) &amp; TEXT(MINUTE( TIMENOW() ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Folio Cotización</label>
    <type>Text</type>
</CustomField>