unpackaged/main/default/objects/Account/fields/QUOTE_Gastos__c.field-meta.xml
<CustomField>
    <fullName>QUOTE_Gastos__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Gastos Notariales</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>