unpackaged/main/default/objects/Account/fields/QUOTE_Gastos_Credito__c.field-meta.xml
<CustomField>
    <fullName>QUOTE_Gastos_Credito__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Gastos</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>