unpackaged/main/default/objects/Account/fields/QUOTE_Ingreso_Solicitado__c.field-meta.xml
<CustomField>
    <fullName>QUOTE_Ingreso_Solicitado__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Ingreso Solicitado</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>