unpackaged/main/default/objects/Account/fields/QUOTE_Lote_Tipo__c.field-meta.xml
<CustomField>
    <fullName>QUOTE_Lote_Tipo__c</fullName>
    <defaultValue>&quot;XXX m2&quot;</defaultValue>
    <inlineHelpText>Ingrese la cantidad de m2 del terreno</inlineHelpText>
    <label>Terreno</label>
    <length>255</length>
    <type>Text</type>
</CustomField>