unpackaged/main/default/objects/Account/fields/QUOTE_m2_Excedentes__c.field-meta.xml
<CustomField>
    <fullName>QUOTE_m2_Excedentes__c</fullName>
    <defaultValue>&quot;0&quot;</defaultValue>
    <label>m2 Excedentes</label>
    <length>50</length>
    <type>Text</type>
</CustomField>