unpackaged/main/default/objects/Account/fields/QUOTE_Mensualidad_INFONAVIT__c.field-meta.xml
<CustomField>
    <fullName>QUOTE_Mensualidad_INFONAVIT__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Mensualidad INFONAVIT</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>