unpackaged/main/default/objects/Account/fields/QUOTE_Monto_que_Recibira_JAVER__c.field-meta.xml
<CustomField>
    <fullName>QUOTE_Monto_que_Recibira_JAVER__c</fullName>
    <formula>CASE( Tipo_Credito__c,
&quot;BANJERCITO&quot;, QUOTE_Credito_Bancario__c                                                   - QUOTE_Gastos_Credito__c, 
&quot;BANSEFI&quot;,    QUOTE_Credito_Bancario__c                                                   - QUOTE_Gastos_Credito__c,
&quot;ISSFAM&quot;,     QUOTE_Credito_Bancario__c                                                   - QUOTE_Gastos_Credito__c,
&quot;ISSSTELEON&quot;, QUOTE_Credito_Bancario__c                                                   - QUOTE_Gastos_Credito__c,
&quot;PENSIONES&quot;,  QUOTE_Credito_Bancario__c                                                   - QUOTE_Gastos_Credito__c,
&quot;SHF/BANCO&quot;,  QUOTE_Credito_Bancario__c                                                   - QUOTE_Gastos_Credito__c,
&quot;COFINAVIT&quot;,  QUOTE_Credito_Bancario__c + QUOTE_Credito_INFONAVIT__c + QUOTE_Subcuenta__c - QUOTE_Gastos_Credito__c,
&quot;FOVISSSTE&quot;,                              QUOTE_Credito_INFONAVIT__c + QUOTE_Subcuenta__c - QUOTE_Gastos_Credito__c,
&quot;INFONAVIT&quot;,                              QUOTE_Credito_INFONAVIT__c + QUOTE_Subcuenta__c - QUOTE_Gastos_Credito__c,
&quot;CONTADO&quot;,    0.00, 
0.00)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monto que Recibirá JAVER</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>