unpackaged/main/default/objects/Account/fields/QUOTE_Nombre_Fracc__c.field-meta.xml
<CustomField>
    <fullName>QUOTE_Nombre_Fracc__c</fullName>
    <formula>Fraccionamiento_cta__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre Fracc</label>
    <type>Text</type>
</CustomField>