unpackaged/main/default/objects/Account/fields/QUOTE_Paquete_Descripcion__c.field-meta.xml
<CustomField>
    <fullName>QUOTE_Paquete_Descripcion__c</fullName>
    <label>Paquete (Descripción)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>