unpackaged/main/default/objects/Account/fields/QUOTE_Precio__c.field-meta.xml
<CustomField>
    <fullName>QUOTE_Precio__c</fullName>
    <formula>QUOTE_Precio_de_Lista__c + QUOTE_Total_Atributos__c +  QUOTE_Total_Paquete__c - QUOTE_Bonificacion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Este precio incluye el precio de lista, todos los atributos, paquetes y gastos</inlineHelpText>
    <label>Precio Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>