unpackaged/main/default/objects/Account/fields/QUOTE_Precio_de_Lista__c.field-meta.xml
<CustomField>
    <fullName>QUOTE_Precio_de_Lista__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Precio de Lista</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>