unpackaged/main/default/objects/Account/fields/QUOTE_Precio_Total__c.field-meta.xml
<CustomField>
    <fullName>QUOTE_Precio_Total__c</fullName>
    <formula>QUOTE_Precio__c +   QUOTE_Gastos__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>