unpackaged/main/default/objects/Account/fields/QUOTE_Promocion__c.field-meta.xml
<CustomField>
    <fullName>QUOTE_Promocion__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Promoción</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>