unpackaged/main/default/objects/Account/fields/Quote_Prototipo__c.field-meta.xml
<CustomField>
    <fullName>Quote_Prototipo__c</fullName>
    <formula>Prototipo_lookup__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prototipo</label>
    <type>Text</type>
</CustomField>