unpackaged/main/default/objects/Account/fields/QUOTE_Subcuenta__c.field-meta.xml
<CustomField>
    <fullName>QUOTE_Subcuenta__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Subcuenta</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>