unpackaged/main/default/objects/Account/fields/QUOTE_Telefono_Asesor__c.field-meta.xml
<CustomField>
    <fullName>QUOTE_Telefono_Asesor__c</fullName>
    <formula>Asesor__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QUOTE Telefono Asesor</label>
    <type>Text</type>
</CustomField>