unpackaged/main/default/objects/Account/fields/QUOTE_Terreno_Excedente__c.field-meta.xml
<CustomField>
    <fullName>QUOTE_Terreno_Excedente__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Precio m2 Excedente</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>