unpackaged/main/default/objects/Account/fields/QUOTE_Total_Atributos__c.field-meta.xml
<CustomField>
    <fullName>QUOTE_Total_Atributos__c</fullName>
    <formula>QUOTE_Esquina__c +   QUOTE_Total_Terreno_Excedente__c  +  QUOTE_Ubicacion_Especial__c +  QUOTE_Otros__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Atributos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>