unpackaged/main/default/objects/Account/fields/QUOTE_Total_Paquete__c.field-meta.xml
<CustomField>
    <fullName>QUOTE_Total_Paquete__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Total Paquete</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>