unpackaged/main/default/objects/Account/fields/QUOTE_Total_Terreno_Excedente__c.field-meta.xml
<CustomField>
    <fullName>QUOTE_Total_Terreno_Excedente__c</fullName>
    <formula>VALUE(QUOTE_m2_Excedentes__c)  *  QUOTE_Terreno_Excedente__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Terreno Excedente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>