unpackaged/main/default/objects/Account/fields/QUOTE_Ubicacion_Especial__c.field-meta.xml
<CustomField>
    <fullName>QUOTE_Ubicacion_Especial__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Ubicación Especial</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>