unpackaged/main/default/objects/Account/fields/Recomendante__c.field-meta.xml
<CustomField>
    <fullName>Recomendante__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recomendante</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Tipo__c</field>
            <operation>equals</operation>
            <value>Cliente</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cuentas Recomendadas</relationshipLabel>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>