unpackaged/main/default/objects/Account/fields/RecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeName__c</fullName>
    <formula>LEFT(RecordType.Name, FIND(&quot; &quot;, RecordType.Name))</formula>
    <label>RecordTypeName</label>
    <type>Text</type>
</CustomField>