unpackaged/main/default/objects/Account/fields/ReferenciaBancariaCliente__c.field-meta.xml
<CustomField>
    <fullName>ReferenciaBancariaCliente__c</fullName>
    <label>Referencia bancaria cliente</label>
    <type>TextArea</type>
</CustomField>