unpackaged/main/default/objects/Account/fields/Residente_de_Entrega__c.field-meta.xml
<CustomField>
    <fullName>Residente_de_Entrega__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Residente de Entrega</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cuentas3</relationshipName>
    <type>Lookup</type>
</CustomField>