unpackaged/main/default/objects/Account/fields/Residente_Inactivo__c.field-meta.xml
<CustomField>
    <fullName>Residente_Inactivo__c</fullName>
    <formula>IF( Residente_de_Entrega__r.IsActive == false, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Residente Inactivo</label>
    <type>Checkbox</type>
</CustomField>