unpackaged/main/default/objects/Account/fields/Residentedeedificacion__c.field-meta.xml
<CustomField>
    <fullName>Residentedeedificacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Residente de edificación</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cuentas2</relationshipName>
    <type>Lookup</type>
</CustomField>