unpackaged/main/default/objects/Account/fields/RESPUESTA_API__c.field-meta.xml
<CustomField>
    <fullName>RESPUESTA_API__c</fullName>
    <label>RESPUESTA_API</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>