unpackaged/main/default/objects/Account/fields/RFC_Completo__c.field-meta.xml
<CustomField>
    <fullName>RFC_Completo__c</fullName>
    <formula>IF(
 OR(RecordType.DeveloperName = &#39;Prospecto_Persona_Fisica&#39;,
  RecordType.DeveloperName = &#39;Afluente_Persona_Fisica&#39;,
  RecordType.DeveloperName = &#39;Cliente_Persona_Fisica&#39;
 ),
 RFC_Base__c + Homoclave__c,
 RFC_Base__c + Homoclave_Texto__c
)</formula>
    <label>RFC Completo</label>
    <type>Text</type>
</CustomField>