unpackaged/main/default/objects/Account/fields/ROW_ID__c.field-meta.xml
<CustomField>
    <fullName>ROW_ID__c</fullName>
    <label>ROW_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>