unpackaged/main/default/objects/Account/fields/Saldsub_cta__c.field-meta.xml
<CustomField>
    <fullName>Saldsub_cta__c</fullName>
    <label>Saldo sub cuenta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>