unpackaged/main/default/objects/Account/fields/SF_Link__c.field-meta.xml
<CustomField>
    <fullName>SF_Link__c</fullName>
    <formula>&#39;https://javer.lightning.force.com/lightning/r/Account/&#39;+Id+&#39;/view&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SF Link</label>
    <type>Text</type>
</CustomField>