unpackaged/main/default/objects/Account/fields/Sub_canal_de_venta__c.field-meta.xml
<CustomField>
    <fullName>Sub_canal_de_venta__c</fullName>
    <label>Sub canal de venta</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Canal_de_Venta__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Sub_canal_de_venta</valueSetName>
    </valueSet>
</CustomField>