unpackaged/main/default/objects/Account/fields/Sub_Canal_Venta__c.field-meta.xml
<CustomField>
    <fullName>Sub_Canal_Venta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Canal Venta</label>
    <referenceTo>Sub_Canal__c</referenceTo>
    <relationshipLabel>Cuentas</relationshipLabel>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>